@@ -47,6 +47,12 @@ void CVT::send( Session* session ){
   if( session->loglevel >= 2 ) command_timer.start();
 
 
+  // Set up our output format handler
+  Compressor *compressor = NULL;
+  if( session->view->output_format == JPEG ) compressor = session->jpeg;
+  else return;
+
+
   // Reload info in case we are dealing with a sequence
   //(*session->image)->loadImageInfo( session->view->xangle, session->view->yangle );
 
@@ -127,8 +133,8 @@ void CVT::send( Session* session ){
 
   if( session->loglevel >= 3 ){
     *(session->logfile) << "CVT :: Requested scaled region size is " << resampled_width << "x" << resampled_height
-			<< " at resolution " << requested_res
-			<< ". Nearest existing resolution has region with size " << view_width << "x" << view_height << endl;
+			<< ". Nearest existing resolution is " << requested_res
+			<< " which has region with size " << view_width << "x" << view_height << endl;
   }
 
 
@@ -153,20 +159,22 @@ void CVT::send( Session* session ){
 	    "X-Powered-By: IIPImage\r\n"
 	    "%s\r\n"
 	    "Last-Modified: %s\r\n"
-	    "Content-Type: image/jpeg\r\n"
-	    "Content-Disposition: inline;filename=\"%s.jpg\"\r\n"
+	    "Content-Type: %s\r\n"
+	    "Content-Disposition: inline;filename=\"%s.%s\"\r\n"
 #ifdef CHUNKED
 	    "Transfer-Encoding: chunked\r\n"
 #endif
 	    "\r\n",
-	    VERSION, session->response->getCacheControl().c_str(), (*session->image)->getTimestamp().c_str(), basename.c_str() );
+	    VERSION, session->response->getCacheControl().c_str(),
+	    (*session->image)->getTimestamp().c_str(),
+	    compressor->getMimeType(), basename.c_str(), compressor->getSuffix() );
 
   session->out->printf( (const char*) str );
 #endif
 
 
   // Get our requested region from our TileManager
-  TileManager tilemanager( session->tileCache, *session->image, session->watermark, session->jpeg, session->logfile, session->loglevel );
+  TileManager tilemanager( session->tileCache, *session->image, session->watermark, compressor, session->logfile, session->loglevel );
   RawTile complete_image = tilemanager.getRegion( requested_res,
 						  session->view->xangle, session->view->yangle,
 						  session->view->getLayers(),
@@ -364,31 +372,31 @@ void CVT::send( Session* session ){
       *(session->logfile) << "CVT :: Embedding ICC profile with size "
 			  << (*session->image)->getMetadata("icc").size() << " bytes" << endl;
     }
-    session->jpeg->setICCProfile( (*session->image)->getMetadata("icc") );
+    compressor->setICCProfile( (*session->image)->getMetadata("icc") );
   }
 
   // Add XMP metadata if this exists
   if( (*session->image)->getMetadata("xmp").size() > 0 ){
     if( session->loglevel >= 3 ) *(session->logfile) << "CVT :: Embedding XMP metadata" << endl;
-    session->jpeg->setXMPMetadata( (*session->image)->getMetadata("xmp") );
+    compressor->setXMPMetadata( (*session->image)->getMetadata("xmp") );
   }
 
 
-  // Initialise our JPEG compression object
-  session->jpeg->InitCompression( complete_image, resampled_height );
+  // Initialise our output compression object
+  compressor->InitCompression( complete_image, resampled_height );
 
 
-  len = session->jpeg->getHeaderSize();
+  len = compressor->getHeaderSize();
 
 #ifdef CHUNKED
   snprintf( str, 1024, "%X\r\n", len );
-  if( session->loglevel >= 4 ) *(session->logfile) << "CVT :: JPEG Header Chunk : " << str;
+  if( session->loglevel >= 4 ) *(session->logfile) << "CVT :: Output Header Chunk : " << str;
   session->out->printf( str );
 #endif
 
-  if( session->out->putStr( (const char*) session->jpeg->getHeader(), len ) != len ){
+  if( session->out->putStr( (const char*) compressor->getHeader(), len ) != len ){
     if( session->loglevel >= 1 ){
-      *(session->logfile) << "CVT :: Error writing jpeg header" << endl;
+      *(session->logfile) << "CVT :: Error writing header" << endl;
     }
   }
 
@@ -399,7 +407,7 @@ void CVT::send( Session* session ){
   // Flush our block of data
   if( session->out->flush() == -1 ) {
     if( session->loglevel >= 1 ){
-      *(session->logfile) << "CVT :: Error flushing jpeg data" << endl;
+      *(session->logfile) << "CVT :: Error flushing output data" << endl;
     }
   }
 
@@ -421,11 +429,11 @@ void CVT::send( Session* session ){
     if( (n==strips-1) && (resampled_height%strip_height!=0) ) strip_height = resampled_height % strip_height;
 
     if( session->loglevel >= 3 ){
-      *(session->logfile) << "CVT :: About to JPEG compress strip with height " << strip_height << endl;
+      *(session->logfile) << "CVT :: About to compress strip with height " << strip_height << endl;
     }
 
     // Compress the strip
-    len = session->jpeg->CompressStrip( input, output, strip_height );
+    len = compressor->CompressStrip( input, output, strip_height );
 
     if( session->loglevel >= 3 ){
       *(session->logfile) << "CVT :: Compressed data strip length is " << len << endl;
@@ -441,7 +449,7 @@ void CVT::send( Session* session ){
     // Send this strip out to the client
     if( len != session->out->putStr( (const char*) output, len ) ){
       if( session->loglevel >= 1 ){
-	*(session->logfile) << "CVT :: Error writing jpeg strip data: " << len << endl;
+	*(session->logfile) << "CVT :: Error writing strip: " << len << endl;
       }
     }
 
@@ -453,14 +461,14 @@ void CVT::send( Session* session ){
     // Flush our block of data
     if( session->out->flush() == -1 ) {
       if( session->loglevel >= 1 ){
-	*(session->logfile) << "CVT :: Error flushing jpeg data" << endl;
+	*(session->logfile) << "CVT :: Error flushing data" << endl;
       }
     }
 
   }
 
   // Finish off the image compression
-  len = session->jpeg->Finish( output );
+  len = compressor->Finish( output );
 
 #ifdef CHUNKED
   snprintf( str, 1024, "%X\r\n", len );
@@ -470,7 +478,7 @@ void CVT::send( Session* session ){
 
   if( session->out->putStr( (const char*) output, len ) != len ){
     if( session->loglevel >= 1 ){
-      *(session->logfile) << "CVT :: Error writing jpeg EOI markers" << endl;
+      *(session->logfile) << "CVT :: Error writing output" << endl;
     }
   }
 
@@ -486,7 +494,7 @@ void CVT::send( Session* session ){
 
   if( session->out->flush()  == -1 ) {
     if( session->loglevel >= 1 ){
-      *(session->logfile) << "CVT :: Error flushing jpeg tile" << endl;
+      *(session->logfile) << "CVT :: Error flushing output" << endl;
     }
   }
 
